style(card): :art: fixing img with overflow "top" not getting correct top padding
Adding padding-top to img tag when the element has a header and a slotted image with an overflow of top.  Padding-top will be set to pfe-local(spacing);

--- a/elements/pfe-card/pfe-card.scss
+++ b/elements/pfe-card/pfe-card.scss
@@ -231,6 +231,12 @@ $size-small: (
       --pfe-card__overflow--MarginBottom: calc(#{pfe-local(spacing--vertical)} * -1);
     }
 
+    &:is(.has-header){
+      ::slotted(img[overflow~="top"]){
+        padding-top: pfe-local(spacing);
+      }
+    }    
+
     &:not(.has-footer) {
       margin-bottom: 0;
     }
